# http-downloader

./: .gitignore  Cargo.toml  README.ZH.md  README.md
examples/cancel_example/: Cargo.toml
examples/cancel_example/src/: main.rs
examples/change_example/: Cargo.toml
examples/change_example/src/: main.rs
examples/readme_example/: Cargo.toml
examples/readme_example/src/: main.rs
examples/timeout_example/: Cargo.toml
examples/timeout_example/src/: main.rs
src/: chunk_item.rs  chunk_iterator.rs  chunk_manager.rs  download_way.rs  downloader.rs  downloader_builder.rs  exclusive.rs  lib.rs
src/extensions/: breakpoint_resume.rs  bson_file_archiver.rs  mod.rs  speed_limiter.rs  speed_tracker.rs  status_tracker.rs
