[package]
name = "readme-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-downloader = { path = "../../../http-downloader", features = ["all-extensions", "async-stream"] }
url = { version = "2" }
tracing-subscriber = { version = "0.3" }
bson = { version = "2.3.0" }
serde = { version = "1.0" }
tracing = { version = "0.1" }
tokio = { version = "1", features = ["rt", "macros","rt-multi-thread"] }
tokio-util = { version = "0.7", features = [] }
anyhow = "1"
futures-util = { version = "0.3" }
async-stream = { version = "0.3" }