[package]
name = "timeout_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-downloader = { path = "../../../http-downloader" }
url = { version = "2" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"